--- a/packages/js/plugins/logger/package.json
+++ b/packages/js/plugins/logger/package.json
@@ -20,8 +20,7 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/core-js": "0.0.1-prealpha.6",
-    "colors": "^1.4.0"
+    "@web3api/core-js": "0.0.1-prealpha.6"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
