--- a/packages/apis/console/web3api.yaml
+++ b/packages/apis/console/web3api.yaml
@@ -9,4 +9,4 @@ query:
     file: ./src/query/index.ts
 import_redirects:
   - uri: w3://w3/logger
-    schema: ../core-apis/logger/schema.graphql
+    schema: ../../core-apis/logger/schema.graphql
