--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "reset": "yarn clean && yarn && yarn build",
     "clean": "rimraf ./**/node_modules ./**/build ./**/coverage",
-    "build": "lerna run build --no-private --ignore @web3api/cli && lerna run build --scope @web3api/cli",
+    "build": "lerna run build --no-private --ignore @web3api/cli* && lerna run build --scope @web3api/cli*",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint -- --fix",
     "lint:ci": "lerna run lint --parallel",
