--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -34,7 +34,7 @@
     "jest": "26.2.2",
     "jest-environment-jsdom": "^26.0.1",
     "rimraf": "3.0.2",
-    "typescript": "^4.1.3"
+    "typescript": "4.0.7"
   },
   "peerDependencies": {
     "react": ">=16.x"
