--- a/documentation/package.json
+++ b/documentation/package.json
@@ -23,6 +23,7 @@
     "@docusaurus/core": "2.0.0-alpha.72",
     "@docusaurus/preset-classic": "2.0.0-alpha.72",
     "@mdx-js/react": "^1.6.21",
+    "docusaurus-lunr-search": "2.1.10",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
