--- a/demos/simple-storage/dapp/package.json
+++ b/demos/simple-storage/dapp/package.json
@@ -16,20 +16,31 @@
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
+    "@nodefactory/dappeteer": "2.0.0",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/puppeteer": "1.3.0",
+    "@types/mkdirp": "0.5.2",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-lottie": "1.2.5",
     "eslint": "^6.6.0",
-    "typescript": "3.7.2"
+    "jest": "26.2.2",
+    "ts-jest": "26.5.4",
+    "jest-puppeteer": "4.4.0",
+    "typescript": "3.7.2",
+    "rimraf": "^3.0.2",
+    "mkdirp": "1.0.4",
+    "serve-handler": "6.1.3",
+    "@jest/types": "26.6.2",
+    "puppeteer": "5.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint --ext .tsx --ext .ts src/",
-    "test": "react-scripts test",
+    "test": "jest --config ./jest.config.js --isolatedModules=false",
     "eject": "react-scripts eject",
     "prebuild": "yarn install:web3api",
     "prestart": "yarn install:web3api",
