--- a/packages/js/tracing/package.json
+++ b/packages/js/tracing/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/context-zone": "^0.18.0",
     "@opentelemetry/exporter-collector": "^0.18.0",
     "@opentelemetry/exporter-jaeger": "^0.18.0",
+    "@opentelemetry/exporter-zipkin": "^0.18.0",
     "@opentelemetry/node": "^0.18.0",
     "@opentelemetry/propagator-b3": "^0.18.0",
     "@opentelemetry/tracing": "^0.18.0",
