--- a/packages/js/plugins/ipfs/web3api.plugin.yaml
+++ b/packages/js/plugins/ipfs/web3api.plugin.yaml
@@ -1,6 +1,13 @@
-format: 0.0.1-prealpha.1
+format: 0.0.1-prealpha.2
+name: Ipfs
 language: plugin/typescript
-schema: ./schema.graphql
+modules:
+  query:
+    schema: ./src/query/schema.graphql
+    module: ./src/query/index.ts
+  mutation:
+    schema: ./src/mutation/schema.graphql
+    module: ./src/mutation/index.ts
 import_redirects:
   - uri: "ens/uri-resolver.core.web3api.eth"
     schema: ../../../core-interfaces/uri-resolver/src/query.graphql
