--- a/packages/js/plugins/logger/package.json
+++ b/packages/js/plugins/logger/package.json
@@ -13,8 +13,8 @@
   "version": "0.0.1-prealpha.71",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc --project tsconfig.build.json",
-    "build:migrate": "rimraf ./build && npx w3 plugin codegen && tsc --project tsconfig.build.json",
+    "build": "rimraf ./build ./**/w3 ./*/**/w3 && tsc --project tsconfig.build.json",
+    "build:migrate": "npx w3 plugin codegen",
     "build:bak": "rimraf ./build && yarn codegen && tsc --project tsconfig.build.json",
     "codegen": "node ../../../../dependencies/node_modules/@web3api/cli/bin/w3 plugin codegen",
     "lint": "eslint --color -c ../../../../.eslintrc.js src/",
