--- a/packages/js/plugins/logger/web3api.plugin.yaml
+++ b/packages/js/plugins/logger/web3api.plugin.yaml
@@ -1,6 +1,10 @@
-format: 0.0.1-prealpha.1
+format: 0.0.1-prealpha.2
+name: Logger
 language: plugin/typescript
-schema: ./schema.graphql
+modules:
+  query:
+    schema: ./src/query/schema.graphql
+    module: ./src/query/index.ts
 import_redirects:
   - uri: "ens/logger.core.web3api.eth"
     schema: ../../../core-interfaces/logger/src/query.graphql
