--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -75,6 +75,9 @@ jobs:
       - name: Install dependencies
         run: yarn install --nonInteractive --frozen-lockfile --prefer-offline
 
+      - name: Build
+        run: yarn build
+
       - name: Test
         run: lerna run test-ci --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/client-js
 
@@ -107,6 +110,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --nonInteractive --frozen-lockfile --prefer-offline
+
+      - name: Build
+        run: yarn build
 
       - name: Test
         run: lerna run test-ci --no-private --scope @web3api/*-plugin-js
@@ -141,6 +147,9 @@ jobs:
       - name: Install dependencies
         run: yarn install --nonInteractive --frozen-lockfile --prefer-offline
 
+      - name: Build
+        run: yarn build
+
       - name: Test
         run: lerna run test-ci --no-private --scope @web3api/client-js
 
@@ -173,6 +182,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --nonInteractive --frozen-lockfile --prefer-offline
+
+      - name: Build
+        run: yarn build
 
       - name: Test
         run: lerna run test-ci --no-private --scope @web3api/cli
