--- a/.github/workflows/js-ci.yaml
+++ b/.github/workflows/js-ci.yaml
@@ -79,7 +79,7 @@ jobs:
         run: yarn build
 
       - name: Test
-        run: lerna run test-ci --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/client-js
+        run: lerna run test:ci --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/client-js
 
   Test-Plugins:
     runs-on: ubuntu-latest
@@ -115,7 +115,7 @@ jobs:
         run: yarn build
 
       - name: Test
-        run: lerna run test-ci --no-private --scope @web3api/*-plugin-js
+        run: lerna run test:ci --no-private --scope @web3api/*-plugin-js
 
   Test-Client:
     runs-on: ubuntu-latest
@@ -151,7 +151,7 @@ jobs:
         run: yarn build
 
       - name: Test
-        run: lerna run test-ci --no-private --scope @web3api/client-js
+        run: lerna run test:ci --no-private --scope @web3api/client-js
 
   Test-Cli:
     runs-on: ubuntu-latest
@@ -187,7 +187,7 @@ jobs:
         run: yarn build
 
       - name: Test
-        run: lerna run test-ci --no-private --scope @web3api/cli
+        run: lerna run test:ci --no-private --scope @web3api/cli
 
 # NOTE: Mac & Windows CI is not currently possible, since GitHub Actions does not
 # use "Docker Enterprise". Docker Enterprise is required when running linux based
