--- a/packages/infra/dev-server/docker-compose.yaml
+++ b/packages/infra/dev-server/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   ganache:
     image: 'trufflesuite/ganache-cli:v6.12.2'
     ports:
-      - '${ETH_TESTNET_PORT}:8545'
+      - '${DEV_SERVER_ETH_TESTNET_PORT}:8545'
     command: -l 8000000 --networkId 1576478390085 --deterministic --hostname=0.0.0.0
   dev-server:
     build: ./
@@ -12,5 +12,5 @@ services:
     links:
       - ganache
     environment:
-      ganache: 'ganache:${ETH_TESTNET_PORT}'
+      ganache: 'ganache:${DEV_SERVER_ETH_TESTNET_PORT}'
       DEV_SERVER_PORT: '${DEV_SERVER_PORT}'
