--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test:ci": "lerna run test:ci --no-private --ignore @web3api/client-js --concurrency 1 && lerna run test:ci --scope @web3api/client-js",
     "test:core": "lerna run test:ci --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/client-js",
     "test:plugins": "lerna run test:ci --no-private --scope @web3api/*-plugin-js --concurrency 1",
-    "test:client": "lerna run test:ci --no-private --scope @web3api/client-js",
+    "test:client": "lerna run test:ci --no-private --scope @web3api/client-js --concurrency 1",
     "test:cli": "lerna run test:ci --no-private --scope @web3api/cli --concurrency 1",
     "version:apply": "npx lerna version $(cat VERSION) --exact --no-git-tag-version --yes",
     "postversion:apply": "git add . && git commit -m \"build(release): migrate to `cat ./VERSION`\"",
