--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -15,8 +15,8 @@
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "prebuild": "ts-node ./scripts/extractPluginConfigs.ts",
     "lint": "eslint --color -c ../../../.eslintrc.js src/",
-    "test": "jest --passWithNoTests --runInBand --verbose=true --detectOpenHandles",
-    "test:ci": "jest --passWithNoTests --runInBand --verbose --detectOpenHandles",
+    "test": "jest --passWithNoTests --runInBand --verbose=true --detectOpenHandles --forceExit",
+    "test:ci": "jest --passWithNoTests --runInBand --verbose --detectOpenHandles --forceExit",
     "test:watch": "jest --watch --passWithNoTests --verbose --detectOpenHandles"
   },
   "dependencies": {
