--- a/package.json
+++ b/package.json
@@ -45,17 +45,18 @@
     "publish:npm": "lerna publish from-package --no-private --yes --registry https://registry.npmjs.org/ --no-verify-access"
   },
   "devDependencies": {
-    "lerna": "4.0.0",
-    "rimraf": "3.0.2",
+    "@types/prettier": "2.6.0",
     "@typescript-eslint/eslint-plugin": "4.11.1",
     "@typescript-eslint/parser": "4.11.1",
     "eslint": "7.16.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.4.0",
-    "prettier": "2.2.1",
+    "eslint-plugin-json": "3.0.0",
     "graphql": "15.5.0",
-    "eslint-plugin-json": "3.0.0"
+    "lerna": "4.0.0",
+    "prettier": "2.2.1",
+    "rimraf": "3.0.2"
   },
   "resolutions": {
     "@types/react": "16.9.0",
