--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "publish:npm": "lerna publish from-package --no-private --yes --registry https://registry.npmjs.org/ --no-verify-access"
   },
   "devDependencies": {
+    "@types/prettier": "2.6.0",
     "lerna": "4.0.0",
     "rimraf": "3.0.2",
     "@typescript-eslint/eslint-plugin": "4.11.1",
