--- a/packages/core-interfaces/logger/package.json
+++ b/packages/core-interfaces/logger/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "npx w3 build",
     "lint": "eslint --color -c ../../../.eslintrc.js .",
-    "test:env:up": "npx w3 test-env up",
-    "test:env:down": "npx w3 test-env down",
+    "test:env:up": "npx w3 infra up --preset=eth-ens-ipfs",
+    "test:env:down": "npx w3 infra down --preset=eth-ens-ipfs",
     "deploy": "npx w3 build --ipfs http://localhost:5001"
   },
   "devDependencies": {
