--- a/.github/workflows/release-publish.yaml
+++ b/.github/workflows/release-publish.yaml
@@ -142,6 +142,14 @@ jobs:
       github.event.pull_request.merged == true
     runs-on: ubuntu-18.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.base.ref }}
+
+      - name: Read VERSION into env.RELEASE_VERSION
+        run: echo RELEASE_VERSION=$(cat VERSION) >> $GITHUB_ENV
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -162,3 +170,15 @@ jobs:
         if: ${{env.TAG_EXISTS}} == 'false'
         working-directory: ./packages/wasm/rs
         run: cargo publish --token ${{secrets.WEB3_API_BUILD_BOT_CRATES_PAT}}
+
+      - uses: actions/github-script@0.8.0
+        if: ${{env.TAG_EXISTS}} == 'false'
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '**[Crates.io Release Published](https://crates.io/search?q=web3api) `${{env.RELEASE_VERSION}}`** 🎉'
+            })
