--- a/packages/js/plugins/filesystem/web3api.plugin.yaml
+++ b/packages/js/plugins/filesystem/web3api.plugin.yaml
@@ -5,6 +5,9 @@ modules:
   query:
     schema: ./src/query/schema.graphql
     module: ./src/query/index.ts
+  mutation:
+    schema: ./src/mutation/schema.graphql
+    module: ./src/mutation/index.ts
 import_redirects:
-  - uri: "ens/uri-resolver.core.web3api.eth"
-    schema: ../../../core-interfaces/uri-resolver/src/query.graphql
+  - uri: "ens/fs.web3api.eth"
+    schema: ../../../core-interfaces/filesystem/build/schema.graphql
