--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -34,6 +34,7 @@
     "@web3api/sha3-plugin-js": "0.0.1-prealpha.84",
     "@web3api/tracing-js": "0.0.1-prealpha.84",
     "@web3api/uts46-plugin-js": "0.0.1-prealpha.84",
+    "@web3api/fs-resolver-plugin-js": "0.0.1-prealpha.84",
     "graphql": "15.5.0",
     "js-yaml": "3.14.0",
     "uuid": "8.3.2"
