--- a/packages/js/plugins/ethereum/web3api.plugin.yaml
+++ b/packages/js/plugins/ethereum/web3api.plugin.yaml
@@ -1,10 +1,5 @@
-format: 0.0.1-prealpha.2
+format: 0.0.1-prealpha.3
 language: plugin/typescript
 name: Ethereum
-modules:
-  query:
-    schema: ./src/query/schema.graphql
-    module: ./src/query/index.ts
-  mutation:
-    schema: ./src/mutation/schema.graphql
-    module: ./src/mutation/index.ts
+main: ./src/index.ts
+schema: ./src/schema.graphql
