--- a/packages/js/plugins/filesystem/web3api.plugin.yaml
+++ b/packages/js/plugins/filesystem/web3api.plugin.yaml
@@ -1,10 +1,8 @@
-format: 0.0.1-prealpha.2
+format: 0.0.1-prealpha.9
 language: plugin/typescript
 name: Filesystem
-modules:
-  query:
-    schema: ./src/query/schema.graphql
-    module: ./src/query/index.ts
+module: ./src/index.ts
+schema: ./src/schema.graphql
 import_redirects:
   - uri: "ens/uri-resolver.core.web3api.eth"
     schema: ../../../core-interfaces/uri-resolver/src/query.graphql
